# MP_DS_Simulation

./: .gitignore  README.md
JSONGenerator/: README  common.py  compare_tasks.py  filter.py  generate_io_file.py  json_generator.py  merge.py
JSONGenerator/example_inputs/: merged_io_files.txt  new_filtered.txt  nextflow_workdir_by_hash.txt  perf_workdirs.txt  strace_workdirs.txt-old
docker/: DockerfileForce365  DockerfileForceDev  DockerfileGeospatial363  JupyterNotebook
kubernetes/: README
kubernetes/common/: nextflow-log-analyzer.yaml  rbac.yaml
kubernetes/gke/: pv.yaml
kubernetes/local/: kind-config.yaml  pv.yaml
nf-trace-model/: .gitignore  README.md  plot.ipynb
nf-trace-model/templates/: workflow.json
nf-trace-model/traces/: 12354.txt  15647.txt  18745.txt
nf-wrench-sim/: .gitignore  CMakeLists.txt  README.md
nf-wrench-sim/data/: 3_nodes_cluster.xml
nf-wrench-sim/include/: JSONWorkflow.h  NextflowWorkflowExecutor.h
nf-wrench-sim/src/: BareMetalChain.cpp  JSONWorkflow.cpp  NextflowWorkflowExecutor.cpp
strace-analysis-notebooks/: README  google_cloud.ipynb  local_cluster.ipynb
